<resources>
    <string name="app_name">MyProject</string>
    <string name="pronounce">Pronounce</string>
    <string name="recognize">Recognize</string>
    <string name="order">Order</string>
    <string name="count">Count</string>
    <string name="textheader">Pleae Select a Section</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="Order1">Order1</string>
    <string name="Order2">Order2</string>
    <string name="Order3">Order3</string>
    <string name="Order4">Order4</string>
    <string name="click2">2</string>
    <string name="click1">1</string>
    <string name="click4">4</string>
    <string name="click3">3</string>
    <string name="click5">5</string>
    <string name="click8">8</string>
    <string name="click6">6</string>
    <string name="click7">7</string>
    <string name="click9">9</string>
    <string name="click10">10</string>
    <string name="Order5">Order5</string>
    <string name="Order6">Order6</string>
    <string name="Order7">Order7</string>
    <string name="Order8">Order8</string>
    <string name="Order9">Order9</string>
    <string name="Order10">Order10</string>
    <string name="count1">1</string>
    <string name="count2">2</string>
    <string name="count3">3</string>
    <string name="count4">4</string>
    <string name="count5">5</string>
    <string name="three3">3</string>
    <string name="one1">1</string>
    <string name="one6">6</string>
    <string name="one7">7</string>
    <string name="five1">1</string>
    <string name="five3">3</string>
    <string name="five5">5</string>
    <string name="four3">3</string>
    <string name="four5">5</string>
    <string name="four4">4</string>
    <string name="two7">7</string>
    <string name="two2">2</string>
    <string name="two1" />
    <string name="two6">6</string>
    <string name="count6">6</string>
</resources>
