<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Order_Activity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/target1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:orientation="vertical"
            android:padding="5dp">


            <Button
                android:id="@+id/test1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/Order1"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="27dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/target2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:orientation="vertical"
            android:padding="5dp">

            <Button
                android:id="@+id/test2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorError"
                android:text="@string/Order2"
                tools:layout_editor_absoluteX="104dp"
                tools:layout_editor_absoluteY="27dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/target3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:orientation="vertical"
            android:padding="5dp">

            <Button
                android:id="@+id/test3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/Order3"
                tools:layout_editor_absoluteX="200dp"
                tools:layout_editor_absoluteY="25dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/target4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:orientation="vertical"
            android:padding="5dp">

            <Button

                android:id="@+id/test4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/Order4"
                tools:layout_editor_absoluteX="294dp"
                tools:layout_editor_absoluteY="27dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnTarget"
        android:layout_width="368dp"
        android:layout_height="107dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/match2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/click2" />

        <Button
            android:id="@+id/match1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/click1" />


        <Button
            android:id="@+id/match4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/click4" />

        <Button
            android:id="@+id/match3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/click3" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTarget">

        <LinearLayout
            android:id="@+id/target5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:orientation="vertical"
            android:padding="5dp">


            <Button
                android:id="@+id/test5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/Order5"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="27dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/target6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:orientation="vertical"
            android:padding="5dp">

            <Button
                android:id="@+id/test6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/Order6"
                tools:layout_editor_absoluteX="104dp"
                tools:layout_editor_absoluteY="27dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/target7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:orientation="vertical"
            android:padding="5dp">

            <Button
                android:id="@+id/test7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/Order7"
                tools:layout_editor_absoluteX="200dp"
                tools:layout_editor_absoluteY="25dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/target8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:orientation="vertical"
            android:padding="5dp">

            <Button

                android:id="@+id/test8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/Order8"
                tools:layout_editor_absoluteX="294dp"
                tools:layout_editor_absoluteY="27dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnTarget2"
        android:layout_width="368dp"
        android:layout_height="103dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/match5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/click5" />

        <Button
            android:id="@+id/match8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/click8" />


        <Button
            android:id="@+id/match6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/click6" />

        <Button
            android:id="@+id/match7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/click7" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTarget2">

        <LinearLayout
            android:id="@+id/target9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:orientation="vertical"
            android:padding="5dp">


            <Button
                android:id="@+id/test9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/Order9"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="27dp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/target10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:orientation="vertical"
            android:padding="5dp">

            <Button
                android:id="@+id/test10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/Order10"
                tools:layout_editor_absoluteX="104dp"
                tools:layout_editor_absoluteY="27dp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnTarget3"
        android:layout_width="368dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <Button
            android:id="@+id/match9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/click9" />

        <Button
            android:id="@+id/match10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/click10" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>