<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pronounce_Activity"
    android:background="@drawable/pronounce_background">

    <Button
        android:id="@+id/button_one"
        android:layout_width="61dp"
        android:layout_height="84dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="52dp"
        android:layout_weight="1"
        android:background="@drawable/round"
        android:text="@string/one"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="61dp"
        android:layout_height="84dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_weight="1"
        android:background="@drawable/round"
        android:text="@string/two"
        android:textColor="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        android:textSize="50sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_one"
        app:layout_constraintStart_toEndOf="@+id/button_one" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="61dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="@drawable/round"
        android:text="@string/three"
        android:textColor="@color/colorAccent"
        android:textColorLink="@color/colorAccent"
        android:textSize="50sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_two" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="61dp"
        android:layout_height="84dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="60dp"
        android:layout_weight="1"
        android:background="@drawable/round"
        android:text="@string/four"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_one" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="61dp"
        android:layout_height="84dp"
        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_weight="1"
        android:background="@drawable/round"
        android:text="@string/five"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_four"
        app:layout_constraintStart_toEndOf="@+id/button_four" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="61dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="@drawable/round"
        android:text="@string/six"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/button_five" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="61dp"
        android:layout_height="84dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="72dp"
        android:layout_weight="1"
        android:background="@drawable/round"
        android:text="@string/seven"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_four" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="61dp"
        android:layout_height="84dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_weight="1"
        android:background="@drawable/round"
        android:text="@string/eight"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_seven"
        app:layout_constraintEnd_toStartOf="@+id/button_nine"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toEndOf="@+id/button_seven" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="61dp"
        android:layout_height="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_weight="1"
        android:background="@drawable/round"
        android:text="@string/nine"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_eight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_eight" />

    <Button
        android:id="@+id/button_ten"
        android:layout_width="61dp"
        android:layout_height="84dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:background="@drawable/round"
        android:text="@string/ten"
        android:textColor="@color/colorAccent"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_eight" />

</android.support.constraint.ConstraintLayout>