<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/mainbaground" > <!-- changed the background to image -->

    <Button
        android:id="@+id/pronounce"
        android:layout_width="163dp"
        android:layout_height="100dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/pronounce"
        android:text="@string/pronounce"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textheader"
        app:layout_constraintVertical_bias="0.486" />

    <Button
        android:id="@+id/order"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/pronounce"
        android:text="@string/order"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/three3"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/pronounce"
        android:text="@string/count"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBaseline_toBaselineOf="@+id/order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.699"
        app:layout_constraintStart_toEndOf="@+id/order" />

    <TextView
        android:id="@+id/textheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/textheader"
        android:textColor="@color/colorAccent"
        android:textColorLink="@android:color/holo_red_light"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>